--- a/Cmakelists.txt
+++ b/Cmakelists.txt
@@ -1,5 +1,21 @@
 cmake_minimum_required(VERSION 3.30)
 project(DemoSDL)
+
+# Generate compile commands.json for better IDE support
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(DemoSDL src/main.cpp)
+
+# Add SDL2 for Emscripten
+if(EMSCRIPTEN)
+    target_compile_options(DemoSDL PRIVATE -sUSE_SDL=2)
+    target_link_options(DemoSDL PRIVATE 
+        -sUSE_SDL=2 
+        -sWASM=1 
+        -sALLOW_MEMORY_GROWTH=1
+        -sFULL_ES2=1
+        -sUSE_WEBGL2=1
+    )
+endif()
