--- a/Cmakelists.txt
+++ b/Cmakelists.txt
@@ -5,8 +5,12 @@ project(DemoSDL)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist)
 
 add_executable(DemoSDL src/main.cpp)
+
 
 # Add SDL2 for Emscripten
 if(EMSCRIPTEN)
