--- a/Cmakelists.txt
+++ b/Cmakelists.txt
@@ -5,12 +5,16 @@ project(DemoSDL)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist)
 
+
+add_subdirectory(${CMAKE_SOURCE_DIR}/box2d)
 add_executable(DemoSDL src/main.cpp)
-
+set_target_properties(DemoSDL PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist
+    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/dist
+)
+target_link_libraries(DemoSDL PRIVATE box2d::box2d)
 
 # Add SDL2 for Emscripten
 if(EMSCRIPTEN)
