--- a/Cmakelists.txt
+++ b/Cmakelists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.30)
 project(DemoSDL)
-
 # Generate compile commands.json for better IDE support
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -29,6 +28,7 @@ target_link_libraries(DemoSDL PRIVATE box2d::box2d)
 target_precompile_headers(DemoSDL PRIVATE "${CMAKE_SOURCE_DIR}/src/pch.h")
 # Add SDL2 for Emscripten
 if(EMSCRIPTEN)
+    set_target_properties(DemoSDL PROPERTIES SUFFIX ".html")
     target_compile_options(DemoSDL PRIVATE 
         --use-port=sdl2
         --use-port=sdl2_image:formats=png
