--- a/Cmakelists.txt
+++ b/Cmakelists.txt
@@ -1,51 +1,60 @@
 cmake_minimum_required(VERSION 3.30)
 project(DemoSDL)
-# Generate compile commands.json for better IDE support
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 20)
 
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/box2d)
-add_executable(DemoSDL 
-    "${CMAKE_SOURCE_DIR}/src/main.cpp"
-    "${CMAKE_SOURCE_DIR}/src/FSM.cpp"
-    "${CMAKE_SOURCE_DIR}/src/FSM.h"
-    "${CMAKE_SOURCE_DIR}/src/IState.h"
-    "${CMAKE_SOURCE_DIR}/src/Application.cpp"
-    "${CMAKE_SOURCE_DIR}/src/Application.h"
-    "${CMAKE_SOURCE_DIR}/src/DebugLayer.cpp"
-    "${CMAKE_SOURCE_DIR}/src/DebugLayer.h"
-    "${CMAKE_SOURCE_DIR}/src/ILayer.h"
-    "${CMAKE_SOURCE_DIR}/src/LayerStack.cpp"
-    "${CMAKE_SOURCE_DIR}/src/LayerStack.h"
-    "${CMAKE_SOURCE_DIR}/src/MainGameLayer.cpp"
-    "${CMAKE_SOURCE_DIR}/src/MainGameLayer.h"
-    "${CMAKE_SOURCE_DIR}/src/Time.h"
-    "${CMAKE_SOURCE_DIR}/src/Time.cpp"
-    "${CMAKE_SOURCE_DIR}/src/Animation.h"
-    "${CMAKE_SOURCE_DIR}/src/Animation.cpp"
-    "${CMAKE_SOURCE_DIR}/src/AssetsManager.h"
-    "${CMAKE_SOURCE_DIR}/src/AssetsManager.cpp"
+set(GAME_SOURCES
+    ${CMAKE_SOURCE_DIR}/src/main.cpp
+    ${CMAKE_SOURCE_DIR}/src/FSM.cpp
+    ${CMAKE_SOURCE_DIR}/src/FSM.h
+    ${CMAKE_SOURCE_DIR}/src/IState.h
+    ${CMAKE_SOURCE_DIR}/src/Application.cpp
+    ${CMAKE_SOURCE_DIR}/src/Application.h
+    ${CMAKE_SOURCE_DIR}/src/DebugLayer.cpp
+    ${CMAKE_SOURCE_DIR}/src/DebugLayer.h
+    ${CMAKE_SOURCE_DIR}/src/ILayer.h
+    ${CMAKE_SOURCE_DIR}/src/MainGameLayer.cpp
+    ${CMAKE_SOURCE_DIR}/src/MainGameLayer.h
+    ${CMAKE_SOURCE_DIR}/src/Time.h
+    ${CMAKE_SOURCE_DIR}/src/Time.cpp
+    ${CMAKE_SOURCE_DIR}/src/Animation.h
+    ${CMAKE_SOURCE_DIR}/src/Animation.cpp
+    ${CMAKE_SOURCE_DIR}/src/LayerStack.cpp
+    ${CMAKE_SOURCE_DIR}/src/LayerStack.h
 )
-target_link_libraries(DemoSDL PRIVATE box2d::box2d)
-target_precompile_headers(DemoSDL PRIVATE "${CMAKE_SOURCE_DIR}/src/pch.h")
-# Add SDL2 for Emscripten
+
+LIST(APPEND LINK_OPTIONS)
+LIST(APPEND COMPILE_OPTIONS)
+LIST(APPEND LINK_LIBRARIES box2d::box2d)
+
 if(EMSCRIPTEN)
-    set_target_properties(DemoSDL PROPERTIES SUFFIX ".html")
-    target_compile_options(DemoSDL PRIVATE 
+    LIST(APPEND COMPILE_OPTIONS 
         --use-port=sdl2
         --use-port=sdl2_image:formats=png
     )
-    target_link_options(DemoSDL PRIVATE 
+    LIST(APPEND LINK_OPTIONS 
         --use-port=sdl2
         --use-port=sdl2_image:formats=png
         -sWASM=1 
         -sALLOW_MEMORY_GROWTH=1
         -sFULL_ES2=1
         -sUSE_WEBGL2=1
-        --shell-file "${CMAKE_SOURCE_DIR}/dist/index.html"
+        --shell-file ${CMAKE_SOURCE_DIR}/dist/index.html
         --preload-file ${CMAKE_SOURCE_DIR}/assets/@assets/
         --use-preload-plugins
     )
+else()
+    find_package(SDL2 REQUIRED)
+    LIST(APPEND LINK_LIBRARIES SDL2::SDL2)
 endif()
+
+
+# add_executable(DemoSDL ${CMAKE_SOURCE_DIR}/src/main.cpp)
+add_executable(DemoSDL ${GAME_SOURCES})
+target_link_libraries(DemoSDL PRIVATE ${LINK_LIBRARIES})
+target_precompile_headers(DemoSDL PRIVATE "${CMAKE_SOURCE_DIR}/src/pch.h")
+# target_compile_options(DemoSDL PRIVATE ${COMPILE_OPTIONS})
+# target_link_options(DemoSDL PRIVATE ${LINK_OPTIONS})
