--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,18 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Debug SDL2 Native",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/build/sdl2/DemoSDL.exe",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": true,
-            "MIMode": "gdb",
-            "miDebuggerPath": "gdb.exe",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ]
-        }
-    ]
+	"version": "0.2.0",
+	"configurations": [
+	    {
+		"name": "(cppvsdbg) Launch",
+		"type": "cppvsdbg",
+		"request": "launch",
+		// Resolved by CMake Tools:
+		"program": "${command:cmake.launchTargetPath}",
+		"args": [],
+		"stopAtEntry": true,
+		"cwd": "${workspaceFolder}",
+		"environment": [
+		],
+		"console": "integratedTerminal",
+	    }
+	]
 }
