--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,39 @@
 		"algorithm": "cpp",
 		"__config": "cpp",
 		"functional": "cpp",
-		"vector": "cpp"
+		"vector": "cpp",
+		"atomic": "cpp",
+		"bit": "cpp",
+		"chrono": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"coroutine": "cpp",
+		"cstddef": "cpp",
+		"exception": "cpp",
+		"format": "cpp",
+		"iterator": "cpp",
+		"new": "cpp",
+		"ostream": "cpp",
+		"stop_token": "cpp",
+		"system_error": "cpp",
+		"thread": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp",
+		"xfacet": "cpp",
+		"xhash": "cpp",
+		"xiosbase": "cpp",
+		"xlocale": "cpp",
+		"xlocbuf": "cpp",
+		"xlocinfo": "cpp",
+		"xlocmes": "cpp",
+		"xlocmon": "cpp",
+		"xlocnum": "cpp",
+		"xloctime": "cpp",
+		"xmemory": "cpp",
+		"xstring": "cpp",
+		"xtr1common": "cpp",
+		"xtree": "cpp",
+		"xutility": "cpp"
 	}
 }
