--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 		// Resolved by CMake Tools:
 		"program": "${command:cmake.launchTargetPath}",
 		"args": [],
-		"stopAtEntry": true,
+		"stopAtEntry": false,
 		"cwd": "${workspaceFolder}",
 		"environment": [
 		],
